[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/Battlefield.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Avatar.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/DiceOverlay.tscn" id="3"]

[node name="Battlefield" type="Node2D"]
script = ExtResource("1")

[node name="Dice" parent="." instance=ExtResource("3")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_bottom = 48.0
theme_override_constants/separation = 40
alignment = 1

[node name="TeamALabel" type="Label" parent="UI/TopBar"]
unique_name_in_owner = true
text = "Team A"

[node name="HeartsA" type="Label" parent="UI/TopBar"]
unique_name_in_owner = true
text = "♥♥"

[node name="TurnLabel" type="Label" parent="UI/TopBar"]
unique_name_in_owner = true
text = "Turn: Team A"

[node name="HeartsB" type="Label" parent="UI/TopBar"]
unique_name_in_owner = true
text = "♥♥"

[node name="TeamBLabel" type="Label" parent="UI/TopBar"]
unique_name_in_owner = true
text = "Team B"

[node name="BottomBar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
theme_override_constants/separation = 12
alignment = 1

[node name="KillBtn" type="Button" parent="UI/BottomBar"]
unique_name_in_owner = true
text = "Kill"

[node name="DoubleBtn" type="Button" parent="UI/BottomBar"]
unique_name_in_owner = true
text = "Double-Kill"

[node name="ReviveBtn" type="Button" parent="UI/BottomBar"]
unique_name_in_owner = true
text = "Revive"

[node name="Status" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -18.0
offset_right = 220.0
offset_bottom = 18.0
text = "Ready"
horizontal_alignment = 1
